Armstrong Number for issue #36

--- a/JavaScript Armstrong Number/index.html
+++ b/JavaScript Armstrong Number/index.html
@@ -12,7 +12,7 @@
    
     <div>
         <form action="">
-            <input type="text" placeholder="Input a 3 digit Number" class="input" href="">
+            <input type="text" placeholder="Input a 3 digit number" class="input">
             <input type="button" value="Check" onclick="armstrong()" class="btn"><br><br>
         </form>
     </div>
