--- a/countdown-timer/index.html
+++ b/countdown-timer/index.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Countdown Timer</title>
-        <link rel="stylesheet" href="./style.css">
-        <script src="./script.js" defer></script>
-    </head>
-    <body>
-        <h1>Until New Beginnings</h1>
-
-        <div class="countdown-container">
-            <div class="countdown-el days-c">
-                <div class="big-text" id="days">0</div>
-                <span>days</span>
-            </div>
-            <div class="countdown-el hours-c">
-                <div class="big-text" id="hours">0</div>
-                <span>hours</span>
-            </div>
-            <div class="countdown-el minutes-c">
-                <div class="big-text" id="minutes">0</div>
-                <span>minutes</span>
-            </div>
-            <div class="countdown-el seconds-c">
-                <div class="big-text" id="seconds">0</div>
-                <span>seconds</span>
-            </div>
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <title>Countdown Timer</title>
+</head>
+<body>
+    <center>
+    <h1>Countdown Timer</h1>
+    </center>
+    <div id="container">
+        <p id="hour-label" class="label">Hours</p><p id="min-label" class="label">Minutes</p><p id="sec-label" class="label">Seconds</p>
+        <input id="hour" type="number" max="99" min="0" value="0" class="time"><p id="p1" class="semicolon">:</p><input id="minute" type="number" max="60" min="0" value="0" class="time"><p id="p2" class="semicolon">:</p><input id="sec" type="number" max="60" min="0" value="0" class="time">
+        <button id="start" class="btn">Start</button>
+        <button id="reset" class="btn">Reset</button>
+    </div>
+    <script src="script.js"></script>
+    
+</body>
 </html>
