--- a/JavaScrip Flip/index.html
+++ b/JavaScrip Flip/index.html
@@ -7,7 +7,7 @@
 </head>
 <body >
     <center>
-        <h1>COIN TOSS!</h1>
+        <h1>Toss the Coin here!</h1>
         <br>
         <form>
             <input id="button" type="button" id ="button" onclick="flip()" value="Flip">
