added animation to setAlarm button

--- a/Alarm Clock in JavaScript/index.html
+++ b/Alarm Clock in JavaScript/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Alarm Clock</title>
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <div class="wrapper">
-      <img src="./files/clock.svg" alt="clock">
+      <img src="./files/clock.svg" alt="clock" />
       <h1>00:00:00 PM</h1>
       <div class="content">
         <div class="column">
@@ -27,10 +27,9 @@
           </select>
         </div>
       </div>
-      <button>Set Alarm</button>
+      <button class="set_alarm_btn">Set Alarm</button>
     </div>
 
     <script src="app.js"></script>
-
   </body>
 </html>
