added min and id for inputs

--- a/bmi_calculator/index.html
+++ b/bmi_calculator/index.html
@@ -10,8 +10,8 @@
     <section>
         <div class="container">
             <h2>Bmi calculator</h2>
-            <input type="number" id="" placeholder="Enter your weight" required>
-            <input type="number" id="" placeholder="Enter your height in meters" required>
+            <input type="number" min="0" id="fnum1" placeholder="Enter your weight" required>
+            <input type="number" min="0" id="fnum2" placeholder="Enter your height in cm" required>
             <button type="button">Calculate</button>
         </div>
     </section>
