added result class

--- a/bmi_calculator/index.html
+++ b/bmi_calculator/index.html
@@ -12,7 +12,8 @@
             <h2>Bmi calculator</h2>
             <input type="number" min="0" id="fnum1" placeholder="Enter your weight" required>
             <input type="number" min="0" id="fnum2" placeholder="Enter your height in cm" required>
-            <button type="button">Calculate</button>
+            <button id="calculator" type="button">Calculate</button>
+            <p class="result"></p>
         </div>
     </section>
     <script src="index.js"></script>
